<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Snappit</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="username_hint">Username</string>
    <string name="forgot_pass">Forgot your Password?</string>
    <string name="sign_up">Sign Up!</string>
    <string name="password_hint">Password</string>
    <string name="logo">logo</string>
    <string name="register">Sign up for a Snappit account</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="email_hint">Enter your email</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>	
    <string name="profile">My Profile</string>	
    <string name="sort">Sort</string>	
    <string name="album_name">Album Name</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">CANCEL</string>
<string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>