<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_action_add"
        android:title="@string/add"
        android:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_action_profile"
        android:title="@string/profile"
        android:showAsAction="ifRoom"/>
    
    <item 
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_action_sort"
        android:title="@string/sort"
        android:showAsAction="ifRoom"/>
    
    <item 
        android:id="@+id/action_sync_down"
        android:icon="@drawable/ic_cloud_download_white_48dp"
        android:title="Download Images from Server"
        android:showAsAction="ifRoom"/>
    
    <item 
        android:id="@+id/action_sync_up"
        android:icon="@drawable/ic_cloud_upload_white_48dp"
        android:title="Upload Images to the Server"
        android:showAsAction="ifRoom"/>

</menu>